Just Fixed Footer bottom belt spacing

--- a/styles/Components/Global/Footer.module.scss
+++ b/styles/Components/Global/Footer.module.scss
@@ -353,6 +353,8 @@
                         @include for-size(phone-only){
                             display: grid;
                             grid-template-columns: 1fr 1fr;
+                            column-gap: 0;
+                            row-gap: 1rem;
                         }
                         
                         
